# sound_cows

./: .gitignore  Cargo.toml
scope-tui/: Cargo.toml  README.md
scope-tui/src/: app.rs  cfg.rs  lib.rs  main.rs  music.rs
scope-tui/src/display/: mod.rs  oscilloscope.rs  spectroscope.rs  vectorscope.rs
scope-tui/src/input/: cpal.rs  file.rs  mod.rs  pulse.rs
scope-tui/src/input/format/: mod.rs
src/: main.rs
src/app/: state.rs
src/audio/: player.rs  stream.rs
src/db/: mod.rs
src/scope/: mod.rs
src/scope/display/: mod.rs  oscilloscope.rs
src/ui/: layout.rs  mod.rs  theme.rs
src/ui/components/: db_playlist.rs  footer.rs  header.rs  playlist.rs  progress.rs  scope_view.rs  search.rs
