[package]
name = "scope-tui"
version = "0.3.4"
edition = "2021"
authors = [ "alemi <me@alemi.dev>" ]
description = "A simple oscilloscope/vectorscope/spectroscope for your terminal"
license = "MIT"
keywords = ["cli", "tui", "audio", "visualization", "scope"]
repository = "https://github.com/alemidev/scope-tui"
readme = "README.md"

[lib]
name = "scope"
path = "src/lib.rs"

[[bin]]
name = "scope-tui"
path = "src/main.rs"
required-features = ["app"]


[dependencies]
derive_more = { version = "2.0", features = ["display", "from"] }
thiserror = "2.0"
rustfft = "6.3"
# for TUI app
clap = { version = "4.5", features = ["derive"], optional = true }
# cross platform audio library backend
cpal = { version = "0.15", optional = true }
# for TUI backend
ratatui = { version = "0.29", features = ["all-widgets"], optional = true }
crossterm = { version = "0.29", optional = true }
# for pulseaudio
libpulse-binding = { version = "2.30", optional = true }
libpulse-simple-binding = { version = "2.29", optional = true }

[features]
default    = ["app", "file", "cpal"]
app        = ["dep:clap", "tui"]
tui        = ["dep:ratatui", "dep:crossterm"]
file       = []
cpal       = ["dep:cpal"]
pulseaudio = ["dep:libpulse-binding", "dep:libpulse-simple-binding"]

[profile.release]    # make small binaries! will take quite longer, from https://github.com/johnthagen/min-sized-rust
opt-level = 'z'      # optimize for size
lto = true           # enable Link Time Optimisation: don't link unused stuff
codegen-units = 1    # reducing codegen units slows it down but allows for better optimization
panic = 'abort'      # abort on panic: don't include code to show what went wrong in release
strip = "symbols"    # strip symbols from binary: have fun debugging on prod! :)
